--- a/docs/Tutorials/Geometry/index.mdx
+++ b/docs/Tutorials/Geometry/index.mdx
@@ -8,10 +8,12 @@ In this document, you will learn how to create good geometry for your levels usi
 
 ## Creating geometry
 
-In your level editor there are preinstalled tools named **ProBuilder** and **ProGrids**. They are powerful tools for creating advanced geometry without a need to use external programs. At first, they can be very confusing to learn. So it is higly recommended to watch this YouTube tutorial made by Brackeys to learn how to use them.
+In your level editor there are preinstalled tools named **ProBuilder** and **ProGrids**. They are powerful tools for creating advanced geometry without a need to use external programs. At first, they can be very confusing to learn. So it is highly recommended to watch this YouTube tutorial made by Brackeys to learn how to use them.
 
 <iframe width="560" height= "315" style={{ margin: 'auto' }} src="https://www.youtube.com/embed/YtzIXCKr8Wo?start=54" title="MAKING YOUR FIRST LEVEL in Unity with ProBuilder!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 #### This video is skipped to 0:54.
 
-Try making some geometry(complex or not, it's your choice) for 3 rooms.
+:::note
+If you are familiar with Blender, then you can build geometry in there, and then import it into Unity. Blender provides more tools for creating geometry than ProBuilder.
+:::
