--- a/docs/Advanced Tutorials/Components/Screenshake/index.mdx
+++ b/docs/Advanced Tutorials/Components/Screenshake/index.mdx
@@ -1,24 +1,30 @@
-<h1>Screenshake Component</h1>
-
-
+---
+title: Screenshake
 
 ---
+# Screenshake component
 
-'Screenshake' is a useful effect that can improve the level experience. Here you'll be able to learn how to use it.
+Screenshake is a useful effect that can improve the level experience. Here you'll be able to learn how to use it.
 
 <img src="https://github.com/layzyidiot/e-sw/blob/main/images/Spelar_4.png?raw=true" alt="Screenshake" width="100%" height="100%"></img>
 
-* Amount - The intensity of the 'Screenshake'.
-
-> [!TIP]
->1-small, 2-normal, 3-big.
+* Amount - The intensity of the screenshake. The range is from 1 to 3:
+-  1 - small;
+-  2 - normal;
+-  3 - big.
 
 * One Time - Activates the screenshake only one time.
 
-* Continuous - Makes the 'Screenshake' work continuously. That means the component will always work when activated. In order to stop the 'Screenshake' simply deactivate the gameobject the component is located in. It is recommended to use this.
+* Continuous - Makes the screenshake work continuously. That means the component will always work when activated. In order to stop the screenshake simply deactivate the gameobject it is located in or disable it from [Object Activator](../../Tutorials/Object%20Activator/). It is recommended to use this.
 
-* Min/Max Distance - Designates a range where the 'Screenshake' will work (i.e. how close the player needs to be to the gameobject with the 'Screenshake' component in order to experience it.)
+:::warning
+If enabled, screenshake will work as long as the gameobject it's put into is enabled.
+:::
 
-> [!NOTE]
->Screenshake' will work as long as the gameobject it's put into is enabled.
+* Min/Max Distance - Designates a range where the screenshake will work (i.e. how close the player needs to be to the gameobject with the screenshake component in order to experience it.)
 
+# How to use
+
+To use the screenshake component, simply apply it on a gameobject, disable it, and later enable it via an object activator.
+
+That's it.
