--- a/docs/Advanced Tutorials/Custom Scripts/index.mdx
+++ b/docs/Advanced Tutorials/Custom Scripts/index.mdx
@@ -17,7 +17,7 @@ Custom scripts are a powerful way of doing unique and complex stuff in your leve
     <li><b><a href="https://c2rsetup.officeapps.live.com/c2r/downloadVS.aspx?sku=community&channel=Release&version=VS2022&source=VSLandingPage&cid=2030:80bd5459bf8341a2b1bb579c798e9abf">Visual Studio 2022(Windows Only)</a></b></li>
     <li>BepInEx Templates(if not installed, run `dotnet new -i BepInEx.Templates --nuget-source https://nuget.bepinex.dev/v3/index.json` in the command line)</li>
     <li>BepInEx nuget source(run `dotnet nuget add source https://nuget.bepinex.dev/v3/index.json --name Bepinex` in the command line)</li>
-    <li><b><a href={require('./assets/UltrakillProject-16d.zip')}>ULTRAKILL Custom Scripts Template</a></b></li>
+    <li><b><a href='https://file.garden/aTq7Gr8urSuXoQPU/UltrakillProject-16d.zip'>ULTRAKILL Custom Scripts Template</a></b></li>
 </ul>
 
 :::note
