Added and updated pages
- Added Indoors Sound Muffling page
- Updated Dual Bosses page
- Updated README
- Fixed wrong title in the config

--- a/docs/Advanced Tutorials/Symbiote/index.mdx
+++ b/docs/Advanced Tutorials/Symbiote/index.mdx
@@ -1,5 +1,10 @@
 # Dual Bosses
 
+:::note
+This tutorial is currently only relevant to SwordMachines and Sisyphean Insurrectionists!
+Subject to change.
+:::
+
 To start off, you'll first need 2 enemies with the `Machine` component. <i>This will not work if both enemies do not have the </i>`Machine`<i> component. </i>
 
 # Linking the enemies
